...
            android:id="@+id/update_propertyId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <EditText
            android:id="@+id/update_propertyTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rounded_textinput"
            android:hint="Title of the property."
...
            android:layout_marginEnd="15dp"
            android:padding="10dp"
            android:textSize="15sp"
            android:layout_margin="5dp"/>

        <EditText
            android:id="@+id/update_propertyPrice"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rounded_textinput"
            android:hint="Price of the property."
            android:inputType="number"
            android:padding="10dp"
            android:textSize="15sp"
            android:layout_margin="5dp"/>
        <EditText
            android:id="@+id/update_propertyAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rounded_textinput"
            android:hint="Address of the property."
...
